-cambios funciona heroku

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,1 @@
-<p>Pagina de LOGIN del GIMNASION IMPACTO VAMOOOOOOOOOOOOOOOOOOS QUE FUNCIONAAAAA</p>
+<p>Pagina de LOGIN del GIMNASION IMPACTO VAMOOOOOOOOOOOOOOOOOOS QUE FUNCIONAAAAAassasd</p>
