--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -1,1 +1,43 @@
-<p>PAGINA DE MENUS </p>
+<section>
+    <div class="col-sm-8">
+        <div class="row">
+            <div class="col-xs-12 col-md card">
+                <img class="card-img-top" src="/assets/imagenes/tablas.jpg" alt="Acceso a tablas">
+                <div>
+                    <h5>Tablas</h5>
+                    <p>En este apartado encontraras las tablas que tu entrenador ha elaborado para tu entrenamiento.</p>
+                </div>
+            </div>
+            <div class="col-xs-12  col-md card">
+                <img class="card-img-top" src="/assets/imagenes/dietas.jpg" alt="CAcceso a dietas">
+                <div >
+                    <h5>Dietas</h5>
+                    <p>Aqui encontraras las dietas que tu entrenador ha elaborado para el cuidado de tu nutricion.</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12  col-md card">
+                <img class="card-img-top" src="/assets/imagenes/clases.jpg" alt="Acceso a clases">
+                <div>
+                    <h5 >Clases</h5>
+                    <p>Accede para apunarte a las clases que quieras asistir en nuestro gimnasio.</p>
+                </div>
+            </div>
+            <div class="col-xs-12 col-md card">
+                <img class="card-img-top" src="/assets/imagenes/ejercicios.jpg" alt="Acceso a ejercicios">
+                <div>
+                    <h5 >Ejercicios</h5>
+                    <p>Ejemplos de ejercicios para realizar en el gimnasio.</p>
+                </div>
+            </div>
+            <div class="col-xs-12 col-md card">
+                <img class="card-img-top" src="/assets/imagenes/seguimiento.jpg" alt="Acceso a segumiento">
+                <div >
+                    <h5>Seguimiento</h5>
+                    <p>Seguimiento del progreso y las metas que te has propuesto.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
