--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<section>
 	<div class="d-flex justify-content-center align-items-center h-100">
 		<div class="card">
 			<div class="card-header">
@@ -30,4 +30,4 @@
 			</div>
 		</div>
 	</div>
-</div>
+</section>
