-Cambios en server -Cambiois footer

--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -1,5 +1,5 @@
-<footer class="page-footer font-small cyan darken-3">
-      <div class="row col iconos">
+<footer class="navbar navbar-fixed-bottom">
+      <div class="row col-12 iconos">
             <!-- Facebook -->
             <a class="fb-ic" href="https://www.facebook.com/GimansioImpactoLaguna">
               <i class="fab fa-facebook m-2 fa-2x"> </i>
@@ -9,5 +9,5 @@
               <i class="fab fa-instagram  m-2 fa-2x"> </i>
             </a>
       </div>
-    <div class="footer-copyright text-center py-1">© 2020 Impacto Laguna</div>
+    <div class="footer-copyright text-center py-1 col-12">© 2020 Impacto Laguna</div>
 </footer>
