--- a/src/app/componentes/footer/footer.component.scss
+++ b/src/app/componentes/footer/footer.component.scss
@@ -1,5 +1,8 @@
 footer {
     background-color: rgb(253, 60, 61);
+    // position: absolute;
+    // bottom: 0;
+    // width: 100%;
 
 }
 a {
@@ -9,7 +12,6 @@ a {
 .iconos {
     margin: 0;
     padding: 0;
-    padding-top: 0.5em;
     display: flex;
     justify-content: center;
     text-align: center;
