--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="content">
-    <router-outlet></router-outlet>
-    <app-footer></app-footer>
+    <router-outlet>
+
+    </router-outlet>
 </div>
