--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,4 @@
 .content{
-    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(33,33,33,1) 20%, rgba(0,0,0,1) 40%, rgba(48,48,48,1) 60%, rgba(0,0,0,1) 80%, rgba(33,33,33,1) 100%);
+    background-color: rgb(31, 34, 41);
+    height: 100%;
 }
