--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -4,9 +4,8 @@
 			<div class="card-header">
 				<h3>Login</h3>
 				<div class="d-flex justify-content-end social_icon">
-					<span><i class="fab fa-facebook-square"></i></span>
-					<span><i class="fab fa-google-plus-square"></i></span>
-					<span><i class="fab fa-twitter-square"></i></span>
+					<span> <a class="fb-ic" href="https://www.facebook.com/GimansioImpactoLaguna"><i class="fab fa-facebook-square"></i></a></span>
+					<span><a class="ins-ic" href="https://www.instagram.com/impactolaguna"><i class="fab fa-instagram-square"></i></a></span>
 				</div>
 			</div>
 			<div class="card-body">
