--- a/src/app/componentes/tablas/tablas.component.html
+++ b/src/app/componentes/tablas/tablas.component.html
@@ -1,3 +1,6 @@
 <section>
-    COMPONENTE TABLAS
+    ID> {{datosUsuario.id}}<br>
+   DNI> {{datosUsuario.dni}}<br>
+   nombre> {{datosUsuario.nombre}}<br>
+   Acceso> {{datosUsuario.acceso}}<br>
 </section> 
