--- a/src/app/componentes/navbar/navbar.component.html
+++ b/src/app/componentes/navbar/navbar.component.html
@@ -29,7 +29,9 @@
             <li class="nav-item dropleft ">
                 <a class="nav-link dropleft-toggle " id="navbarDropdownMenuLink" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
-                    <i class="fas fa-user fa-2x "></i>
+                    {{usuarioLogeado.nombre}}
+                    <i class="fas fa-user fa-2x ml-2"></i>
+                    
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="#">Cambiar contraseña</a>
