--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,9 @@
 html {
-    min-height: 100%;
-    position: relative;
-    padding-bottom: 85px;
-  }
+  min-height: 100%;
+  position: relative;
+  padding-bottom: 85px;
+}
+
+.hide {
+  display: none;
+}
