--- a/src/app/componentes/tablas/tablas.component.scss
+++ b/src/app/componentes/tablas/tablas.component.scss
@@ -1,8 +1,20 @@
-// section {
-//     color: white;
-// }
+section {
+    color: white;
+}
 
-section{
+.tarjeta {
     display: flex;
     justify-content: center;
+    margin: 1em;
+    padding: 70px 0;
+    background-color: rgba(36, 36, 36, 0.452);
+    border: 1px solid rgba(2, 0, 0, 0.1);
+}
+
+h3 {
+    text-align: center;
+    color: white;
+}
+i {
+    color: white;
 }
