--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,6 @@
     min-height: calc(100vh - 60px - 85px);
     background-color: rgb(31, 34, 41);
     color: white;
-    background: url("src/assets/imagenes/fondoApp.jpg") no-repeat center center fixed;
-    background-size: cover;
+    // background: url("src/assets/imagenes/fondoApp.jpg") no-repeat center center fixed;
+    // background-size: cover;
 }
