--- a/src/app/componentes/tablas/crear-tablas/crear-tablas.component.html
+++ b/src/app/componentes/tablas/crear-tablas/crear-tablas.component.html
@@ -1,2 +1,200 @@
-<p>crear-tablas works!</p>
-<button type="submit" (click)="crearTabla()">ENVIAR TABLA</button>
+<section class="container">
+    <div class="row d-flex justify-content-center">
+        <div class="col-sm-12">
+            <h2 class=""> Creacion de nueva tabla</h2>
+        </div>
+
+
+        <div class="col-sm-12 " [formGroup]="formNuevaTabla">
+            <label class="col-sm-12 control-label text-left">
+                Nombre de la tabla
+                <input type="text" class="form-control" formControlName="nombreTabla">
+            </label>
+            <div class="dia">
+                <h3 class="col-sm-12">Dia 1</h3>
+                <label class="control-label text-left col-md-7 col-sm-12"> Ejercicio
+                    <input type="text" class="form-control" formControlName="ejercicioDia1">
+                </label>
+                <label class="control-label text-left col-md-3 col-sm-12"> Repeticiones
+                    <input type="text" class="form-control" formControlName="repeticionesDia1">
+                </label>
+                <button type="submit" class="btn botonAñadirEjer"
+                    (click)="anadirEjercicio(ejerciciosDia1,'ejercicioDia1','repeticionesDia1')"
+                    [disabled]="(!formNuevaTabla.controls.ejercicioDia1.valid || !formNuevaTabla.controls.repeticionesDia1.valid)">
+                    <i class="fas fa-plus-circle"></i> Añadir ejercicio
+                </button>
+                <div class="table-responsive tablaEjercicios col-sm-12 ">
+                    <table class="table table-dark   ">
+                        <thead class="thead-dark">
+                            <tr class="d-flex">
+                                <th class="col-7">Ejercicio</th>
+                                <th class="col-3">Repeticiones</th>
+                                <th class="col-2">Eliminar</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let ejercicio of ejerciciosDia1; let i = index" class="d-flex">
+                                <td class="col-7"> {{ejercicio.nombre}}</td>
+                                <td class="col-3"> {{ejercicio.repeticiones}}</td>
+                                <td class="col-2 text-center"><button class="btn botonAñadirEjer"
+                                        (click)="borrarEjercicio(ejerciciosDia1,i)">
+                                        <i class="fas fa-trash-alt"></i></button>
+                                </td>
+                        </tbody>
+                    </table>
+
+                </div>
+            </div>
+
+            <div class="dia">
+                <h3 class="col-sm-12">Dia 2</h3>
+                <label class="control-label text-left col-md-7 col-sm-12"> Ejercicio
+                    <input type="text" class="form-control" formControlName="ejercicioDia2">
+                </label>
+                <label class="control-label text-left col-md-3 col-sm-12"> Repeticiones
+                    <input type="text" class="form-control" formControlName="repeticionesDia2">
+                </label>
+                <button type="submit" class="btn botonAñadirEjer  "
+                    (click)="anadirEjercicio(ejerciciosDia2,'ejercicioDia2','repeticionesDia2')"
+                    [disabled]="(!formNuevaTabla.controls.ejercicioDia2.valid || !formNuevaTabla.controls.repeticionesDia2.valid)">
+                    <i class="fas fa-plus-circle"></i> Añadir ejercicio
+                </button>
+                <div class="table-responsive tablaEjercicios col-sm-12 ">
+                    <table class="table table-dark   ">
+                        <thead class="thead-dark">
+                            <tr class="d-flex">
+                                <th class="col-7">Ejercicio</th>
+                                <th class="col-3">Repeticiones</th>
+                                <th class="col-2">Eliminar</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let ejercicio of ejerciciosDia2; let i = index" class="d-flex">
+                                <td class="col-7"> {{ejercicio.nombre}}</td>
+                                <td class="col-3"> {{ejercicio.repeticiones}}</td>
+                                <td class="col-2 text-center"><button class="btn botonAñadirEjer"
+                                        (click)="borrarEjercicio(ejerciciosDia2,i)">
+                                        <i class="fas fa-trash-alt"></i></button>
+                                </td>
+                        </tbody>
+                    </table>
+
+                </div>
+            </div>
+            <div class="dia">
+                <h3 class="col-sm-12">Dia 3</h3>
+                <label class="control-label text-left col-md-7 col-sm-12"> Ejercicio
+                    <input type="text" class="form-control" formControlName="ejercicioDia3">
+                </label>
+                <label class="control-label text-left col-md-3 col-sm-12"> Repeticiones
+                    <input type="text" class="form-control" formControlName="repeticionesDia3">
+                </label>
+                <button type="submit" class="btn botonAñadirEjer  "
+                    (click)="anadirEjercicio(ejerciciosDia3,'ejercicioDia3','repeticionesDia3')"
+                    [disabled]="(!formNuevaTabla.controls.ejercicioDia3.valid || !formNuevaTabla.controls.repeticionesDia3.valid)">
+                    <i class="fas fa-plus-circle"></i> Añadir ejercicio
+                </button>
+                <div class="table-responsive tablaEjercicios col-sm-12 ">
+                    <table class="table table-dark   ">
+                        <thead class="thead-dark">
+                            <tr class="d-flex">
+                                <th class="col-7">Ejercicio</th>
+                                <th class="col-3">Repeticiones</th>
+                                <th class="col-2">Eliminar</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let ejercicio of ejerciciosDia3; let i = index" class="d-flex">
+                                <td class="col-7"> {{ejercicio.nombre}}</td>
+                                <td class="col-3"> {{ejercicio.repeticiones}}</td>
+                                <td class="col-2 text-center"><button class="btn botonAñadirEjer"
+                                        (click)="borrarEjercicio(ejerciciosDia3,i)">
+                                        <i class="fas fa-trash-alt"></i></button>
+                                </td>
+                        </tbody>
+                    </table>
+
+                </div>
+            </div>
+            <div class="dia">
+                <h3 class="col-sm-12">Dia 4</h3>
+                <label class="control-label text-left col-md-7 col-sm-12"> Ejercicio
+                    <input type="text" class="form-control" formControlName="ejercicioDia4">
+                </label>
+                <label class="control-label text-left col-md-3 col-sm-12"> Repeticiones
+                    <input type="text" class="form-control" formControlName="repeticionesDia4">
+                </label>
+                <button type="submit" class="btn botonAñadirEjer  "
+                    (click)="anadirEjercicio(ejerciciosDia4,'ejercicioDia4','repeticionesDia4')"
+                    [disabled]="(!formNuevaTabla.controls.ejercicioDia4.valid || !formNuevaTabla.controls.repeticionesDia4.valid)">
+                    <i class="fas fa-plus-circle"></i> Añadir ejercicio
+                </button>
+                <div class="table-responsive tablaEjercicios col-sm-12 ">
+                    <table class="table table-dark   ">
+                        <thead class="thead-dark">
+                            <tr class="d-flex">
+                                <th class="col-7">Ejercicio</th>
+                                <th class="col-3">Repeticiones</th>
+                                <th class="col-2">Eliminar</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let ejercicio of ejerciciosDia4; let i = index" class="d-flex">
+                                <td class="col-7"> {{ejercicio.nombre}}</td>
+                                <td class="col-3"> {{ejercicio.repeticiones}}</td>
+                                <td class="col-2 text-center"><button class="btn botonAñadirEjer"
+                                        (click)="borrarEjercicio(ejerciciosDia4,i)">
+                                        <i class="fas fa-trash-alt"></i></button>
+                                </td>
+                        </tbody>
+                    </table>
+
+                </div>
+            </div>
+            <div class="dia">
+                <h3 class="col-sm-12">Dia 5</h3>
+                <label class="control-label text-left col-md-7 col-sm-12"> Ejercicio
+                    <input type="text" class="form-control" formControlName="ejercicioDia5">
+                </label>
+                <label class="control-label text-left col-md-3 col-sm-12"> Repeticiones
+                    <input type="text" class="form-control" formControlName="repeticionesDia5">
+                </label>
+                <button type="submit" class="btn botonAñadirEjer  "
+                    (click)="anadirEjercicio(ejerciciosDia5,'ejercicioDia5','repeticionesDia5')"
+                    [disabled]="(!formNuevaTabla.controls.ejercicioDia5.valid || !formNuevaTabla.controls.repeticionesDia5.valid)">
+                    <i class="fas fa-plus-circle"></i> Añadir ejercicio
+                </button>
+                <div class="table-responsive tablaEjercicios col-sm-12 ">
+                    <table class="table table-dark   ">
+                        <thead class="thead-dark">
+                            <tr class="d-flex">
+                                <th class="col-7">Ejercicio</th>
+                                <th class="col-3">Repeticiones</th>
+                                <th class="col-2">Eliminar</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let ejercicio of ejerciciosDia5; let i = index" class="d-flex">
+                                <td class="col-7"> {{ejercicio.nombre}}</td>
+                                <td class="col-3"> {{ejercicio.repeticiones}}</td>
+                                <td class="col-2 text-center"><button class="btn botonAñadirEjer"
+                                        (click)="borrarEjercicio(ejerciciosDia5,i)">
+                                        <i class="fas fa-trash-alt"></i></button>
+                                </td>
+                        </tbody>
+                    </table>
+
+                </div>
+            </div>
+            <div class="d-flex justify-content-center p-3">
+                <button type="submit" class="btn botonAñadirEjer col-md-10  " (click)="guardarTabla()" >
+                    <i class="fas fa-save"></i>Guardar tabla
+                </button>
+            </div>
+
+        </div>
+
+    </div>
+
+
+</section>
