--- a/src/app/componentes/tablas/tablas.component.html
+++ b/src/app/componentes/tablas/tablas.component.html
@@ -1,6 +1,5 @@
-<section>
-    <div class="col-sm-12">
-        <div class="row">
+<section class="col-sm-12">
+        <div class="row" *ngIf="acceso == '1'">  
             <div class="col-sm-12 d-flex justify-content-center">
                 <div class="col-md-4 pt-5">
                     <buscador-component (selected)="selectUsuario($event)" [config]="configBuscador">
@@ -10,16 +9,15 @@
         </div>
 
         <div class="row d-flex justify-content-center ">
-            <a class="col-sm-12 col-md-2 tarjeta row " href="/tablas/crear">
+            <a class="col-sm-12 col-md-2 tarjeta row " href="/tablas/crear/{{idUsuario}}" *ngIf="(acceso !='1') || (acceso == '1' && idUsuario != null)">
                 <i class="fas fa-plus-square fa-4x"></i>
-                <h3 class="col-sm-12">Añadir tabla</h3>
+                <!-- <img src="/assets/imagenes/prueba/image.png" alt="Acceso a tablas"> -->
+                <h4 class="col-sm-12">Añadir tabla</h4>
             </a>
             <a class="col-sm-12 col-md-2 tarjeta row " *ngFor="let tabla of tablasUsuario"  href="/tablas/visualizar/{{tabla._id}}">
                 <i class="fas fa-calendar-alt fa-4x"></i>
-                <h3 class="col-sm-12">{{tabla.nombre}}</h3>
+                
+                <h4 class="col-sm-12">{{tabla.nombre}}</h4>
             </a>
-
-
         </div>
-    </div>
 </section>
